# NoisyArcFinder

./: .gitignore  LICENSE  README.md  generate_bulbs.py  predict_dinov2_heatmap_crop.py  predict_heatmap.py  pyproject.toml  train_dinov2_heatmap_crop.py  train_heatmap.py  train_label.py
checkpoints/: heatmap_best.pt
