[project]
name = "bulb-detection"
version = "0.1.0"
description = "3 bulb centroid detection through glass (SAM + Grounding DINO + DINOv2)"
requires-python = ">=3.10,<3.13"
dependencies = []

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = "3.12.*"
numpy = "*"
opencv = "*"
matplotlib = "*"
pillow = "*"
tqdm = "*"
requests = "*"
pip = "*"

[tool.pixi.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]

[tool.pixi.pypi-dependencies]
torch = ">=2.7"
torchvision = ">=0.22"
transformers = "*"
accelerate = "*"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
